--- a/client/style.css
+++ b/client/style.css
@@ -1,8 +1,8 @@
 body {
     background-image: url("https://images.unsplash.com/photo-1493723843671-1d655e66ac1c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
     background-color: #cccccc;
-    height: 100vh;
-    padding: 20px !important;
+    /* height: 100vh; */
+    /* padding: 20px !important; */
     min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
@@ -12,13 +12,36 @@ body {
    }
 
 .logreg-page {
-    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    margin: 0 auto;
+}
+#addtodo-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    margin: 0 auto;
+}
+#editalltodo-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    margin: 0 auto;
+}
+.card-bg {
+    background-color: rgba(255, 255, 255, 0.7) !important
 }
 
 .fixed-content {
-    top: 150px;
-    bottom:0;
-    position:fixed;
+    /* top: 150px; */
+    /* bottom:0; */
+    margin: 0 auto;
+    /* position:fixed; */
     overflow-y:scroll;
     overflow-x:hidden;
 }
@@ -57,10 +80,10 @@ body {
     text-align: left;
 }
 
-.todo-container {
+/* .todo-container {
     margin-left: 5%;
     text-align: center;
-}
+} */
 
 #weather-content p{
     margin: 0;
@@ -75,5 +98,11 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;    
+    align-items: top;
+    height: 100px !important;
+    margin-top: 30px;
+}
+.card-footer {
+    display: flex;
+    justify-content: space-between;
 }
